Connection String angepasst

--- a/IvA/appsettings.json
+++ b/IvA/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-IvA-070AA16A-E7E8-4018-9BAF-DB03C2C3BB79;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=<ubi19.informatik.uni-siegen.de>.database.windows.net;Initial Catalog=Database;Connect Timeout=30;Encrypt=True;User ID=gruppe01-1;Password=IvAGruppe1!;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
