Added A Connection String to the Database / Added a ProjectUser Tab / Added Basic Database Interactionfeatures for the ProjectUser Tab

--- a/IvA/appsettings.json
+++ b/IvA/appsettings.json
@@ -1,13 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=<ubi19.informatik.uni-siegen.de>.database.windows.net;Initial Catalog=Database;Connect Timeout=30;Encrypt=True;User ID=gruppe01-1;Password=IvAGruppe1!;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "DefaultConnection": "Server = ubi19.informatik.uni-siegen.de;Database = TestDatabase;Connect Timeout=30;Encrypt=True;User Id=gruppe01-1;Password=IvAGruppe1!;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+  }
 }
