Pakete mit Projekten verschmolzen, Adminpanel um Rollen erweitert

--- a/IvA/appsettings.json
+++ b/IvA/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server = ubi19.informatik.uni-siegen.de;Database = TestDatabase;Connect Timeout=30;Encrypt=True;User Id=gruppe01-1;Password=IvAGruppe1!;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "DefaultConnection": "Server = ubi19.informatik.uni-siegen.de;Database = TestDatabase;Connect Timeout=30;Encrypt=True;User Id=gruppe01-1;Password=IvAGruppe1!;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;MultipleActiveResultSets=true",
     "Logging": {
       "LogLevel": {
         "Default": "Information",
